实现 Compose 中的 EChart 调用